k8s/postgres_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          ports:
            - containerPort: 5432
      #     volumeMounts:
      #       - name: postgres-persistent-storage
      #         mountPath: /var/lib/postgresql/data
      # volumes:
      #   - name: postgres-persistent-storage
      #     persistentVolumeClaim:
      #       claimName: postgres-pvc
