k8s/fastapi_service.yaml
# fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
