k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: my-apps.local # replace with your own domain
      http:
        paths:
          - path: /fastapi
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  name: http
